UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Data_Upload_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Data_Received__c</fullName>
        <label>Date of Data Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Upload__c</fullName>
        <label>Date of Upload</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Frequency__c</fullName>
        <label>Upload Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Based on Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Status__c</fullName>
        <label>Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Yet to Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uploaded_By__c</fullName>
        <label>Uploaded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Provided_Data__c</fullName>
        <label>Who Provided Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Upload Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Who_Provided_Data__c</columns>
        <columns>Date_of_Data_Received__c</columns>
        <columns>Date_of_Upload__c</columns>
        <columns>Upload_Frequency__c</columns>
        <columns>Uploaded_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Upload Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Upload Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>